--- a/_layouts/vibes/bibcode-extractor.html
+++ b/_layouts/vibes/bibcode-extractor.html
@@ -40,7 +40,9 @@
             <textarea id="keys" readonly></textarea>
             <div class="panel">
                 <span id="stat"></span>
+                <!-- don't enable download
                 <button id="save">Download keys.txt</button>
+                -->
             </div>
             <div id="log"></div>
         </div>
